--- a/Rb.Web/Views/Book/Details.cshtml
+++ b/Rb.Web/Views/Book/Details.cshtml
@@ -27,7 +27,7 @@
                         <dd>@Html.DisplayFor(model => model.PublishPlace)</dd>
 
                         <dt>Про книгу</dt>
-                        <dd>bla bla bla</dd>
+                        <dd>@Html.DisplayFor(model => model.Annotation)</dd>
                     </dl>
                 </div>
             </div>
